--- a/Modularbeit.ipynb
+++ b/Modularbeit.ipynb
@@ -327,6 +327,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer3_mlp = Sequential()\n",
+    "layer3_mlp.add(Dense(30, activation='relu', input))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [
@@ -374,6 +384,11 @@
     "y_pred = model.predict(x_test_gray)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
