Add structure to document

--- a/Modularbeit.ipynb
+++ b/Modularbeit.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Modularbeit Neuronale Netze für betriebswirtschafltiche Anwendungen\n",
     "\n",
-    "von Nicholas Aiken (40214918) und Christian Kallmaier ()"
+    "von Nicholas Aiken (40214918) und Christian Kallmaier (39573418)"
    ]
   },
   {
@@ -32,13 +32,14 @@
     "            3. Vergleich mehrerer Fehlerfunktionen\n",
     "            4. Vergleich mehererer Optimizer\n",
     "            5. Variation von Batchsize und Epochs\n",
-    "    2. Convolutional Neural Net\n",
+    "    2. Convolutional Neuronal Network\n",
     "        1. Variation verschiedener Convolution-Layer\n",
     "        2. Dropout vs. kein Dropout\n",
     "        3. Vergleich mehrerer Aktivierungsfunktionen\n",
     "        4. Vergleich mehrerer Fehlerfunktionen\n",
     "        5. Vergleich mehererer Optimizer\n",
     "        6. Variation von Batchsize und Epochs\n",
+    "    3. Convolutional Neuronal Network mit Autoencoder\n",
     "3. Anwendung der Ergebnisse auf die Klassifikation von RGB-Farbbildern\n",
     "    1. MLP\n",
     "    2. CNN"
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +315,7 @@
     "# 2. Vergleich mehrerer neuronaler Netze zur Klassifikation von Graustufen-Bildern\n",
     "\n",
     "\n",
-    "### 1. Standard Multilayer Perzeptron"
+    "### 2.1. Standard Multilayer Perzeptron"
    ]
   },
   {
@@ -326,69 +327,46 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.1. Vergleich verschiedener Dropout-Stärken"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "layer3_mlp = Sequential()\n",
-    "layer3_mlp.add(Dense(30, activation='relu', input))\n"
+    "layer3_mlp.add(Dense(30, activation='relu'))\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "43/43 [==============================] - 16s 359ms/step - loss: 2.6927 - accuracy: 0.3867 - val_loss: 1.6950 - val_accuracy: 0.5712\n",
-      "395/395 [==============================] - 3s 7ms/step\n",
-      "[[1.9185123e-05 1.4270701e-04 6.9719285e-04 ... 7.4033655e-05\n",
-      "  5.8437759e-06 1.7070446e-06]\n",
-      " [1.4690880e-02 5.3738928e-03 1.0406342e-02 ... 8.8683620e-02\n",
-      "  9.9804467e-03 7.8718067e-04]\n",
-      " [9.7761359e-03 9.0575302e-03 1.1315365e-02 ... 2.8824301e-03\n",
-      "  3.9118316e-02 1.1189876e-03]\n",
-      " ...\n",
-      " [2.6875408e-04 8.9416867e-03 1.8611552e-02 ... 8.1483247e-03\n",
-      "  2.7718996e-03 1.0694169e-03]\n",
-      " [1.6613692e-04 3.0564718e-02 2.6190212e-02 ... 8.0270407e-04\n",
-      "  3.6974635e-04 1.9998040e-05]\n",
-      " [4.9714972e-03 6.0483511e-03 1.2925517e-02 ... 6.7987177e-03\n",
-      "  2.5472979e-03 3.7049332e-03]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#First try\n",
-    "model = Sequential()\n",
-    "model.add(Conv2D(32, kernel_size=3, padding='same', activation='relu', input_shape=(32, 32, 1)))\n",
-    "model.add(MaxPooling2D(pool_size=2))\n",
-    "model.add(Flatten())\n",
-    "model.add(Dense(300, activation='relu'))\n",
-    "model.add(Dense(43, activation='softmax'))\n",
-    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
-    "\n",
-    "\n",
-    "hist = model.fit(x_train_gray, data_gray['y_train'], \n",
-    "        epochs=1,\n",
-    "        batch_size=2048,\n",
-    "        verbose=1,\n",
-    "        validation_data=(x_test_gray, y_test_gray),  \n",
-    ")\n",
-    "\n",
-    "\n",
-    "y_pred = model.predict(x_test_gray)\n",
-    "\n"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 2.1.2. Vergleich mehrerer Aktivierungsfunktionen"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.3. Vergleich mehrerer Optimizer"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.4 Variation von Batchsize und Anzahl der Epochs"
+   ]
   },
   {
    "cell_type": "code",
@@ -1482,6 +1460,142 @@
     "    )\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2. Tiefes MLP (DNN)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.1. Vergleich verschiedener Dropout-Stärken"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.2. Vergleich mehrerer Aktivierungsfunktionen\n",
+    "\n",
+    "(ReLU, Leaky ReLU, Sigmoid)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.3. Vergleich mehrerer Optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#First try\n",
+    "model = Sequential()\n",
+    "model.add(Conv2D(32, kernel_size=3, padding='same', activation='relu', input_shape=(32, 32, 1)))\n",
+    "model.add(MaxPooling2D(pool_size=2))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(300, activation='relu'))\n",
+    "model.add(Dense(43, activation='softmax'))\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "\n",
+    "hist = model.fit(x_train_gray, data_gray['y_train'], \n",
+    "        epochs=1,\n",
+    "        batch_size=2048,\n",
+    "        verbose=1,\n",
+    "        validation_data=(x_test_gray, y_test_gray),  \n",
+    ")\n",
+    "\n",
+    "\n",
+    "y_pred = model.predict(x_test_gray)\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.4. Variation von Batchsize und Anzahl Epochs"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.3. Convolutional Neural Netowrks"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3.1. Vergleich und Variation verschiedener Convolution-Layer und ihrer Metaparameter \n",
+    "\n",
+    "Filtersitze etc."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3.2. Vergleich verschiedener Dropout-Stärken\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3.3. Vergleich verschiedener Aktivierungsfunktionen"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3.4. Vergleich mehrerer Optimizer"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3.5. Variation von Batchsize und Anzahl Epochs"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.4. Convolutional Neural Networks mit Autoencoder"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Anwendung der Ergebnisse auf die Klassifikation von RGB-Farbbildern"
    ]
   }
  ],
