--- a/3_Layer_MLP.ipynb
+++ b/3_Layer_MLP.ipynb
@@ -3328,7 +3328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fff157e2",
+   "id": "3b2298e7",
    "metadata": {},
    "source": [
     "#### Dropout von 0.3"
@@ -3337,7 +3337,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0b7e48a9",
+   "id": "6190d393",
    "metadata": {},
    "outputs": [
     {
@@ -3611,7 +3611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b58bb22a",
+   "id": "efea8705",
    "metadata": {},
    "source": [
     "#### Dropout von 0,1"
@@ -3620,7 +3620,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "db7e5a5e",
+   "id": "f21fbd16",
    "metadata": {},
    "outputs": [
     {
@@ -3894,7 +3894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c450057f",
+   "id": "b8bb7eb6",
    "metadata": {},
    "source": [
     "#### Dropout 0,3 beste val_acc: 0,9219 -> Epochs und Dense verändern"
@@ -3903,7 +3903,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "71f0a96d",
+   "id": "51c723c0",
    "metadata": {},
    "outputs": [
     {
@@ -4178,7 +4178,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9acdfa37",
+   "id": "39f3da62",
    "metadata": {},
    "outputs": [
     {
@@ -4452,7 +4452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b78ebc1e",
+   "id": "db5ce2fc",
    "metadata": {},
    "source": [
     "#### dense 800 kleiner teil besser, vllt epochs erhöhen"
@@ -4461,7 +4461,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d426fcf4",
+   "id": "3047e813",
    "metadata": {},
    "outputs": [
     {
@@ -4781,7 +4781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b167d5f",
+   "id": "6bca54f7",
    "metadata": {},
    "source": [
     "#### Kein besseres ergebnis, nun mit sigmoid aktivierungsfunktion"
@@ -4790,7 +4790,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a3383b2e",
+   "id": "df396183",
    "metadata": {},
    "outputs": [
     {
@@ -5065,10 +5065,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e7b8eda",
+   "id": "a5595d71",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Definition Topologie des Netzes\n",
+    "three_layer_mlp_dropout_30 = Sequential()\n",
+    "three_layer_mlp_dropout_30.add(Dense(800, activation ='relu', input_dim=1024))\n",
+    "three_layer_mlp_dropout_30.add(Dropout(0.3))\n",
+    "three_layer_mlp_dropout_30.add(Dense(43, activation='softmax'))\n",
+    "\n",
+    "#Lernprozess konfigurieren\n",
+    "three_layer_mlp_dropout_30.compile(loss='binary_crossentropy',\n",
+    "              optimizer='adam',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# Modell trainieren\n",
+    "three_layer_mlp_dropout_30_history = three_layer_mlp_dropout_30.fit(x_train_gray, y_train_gray, \n",
+    "          epochs=100, #Anzahl Trainingsepochen\n",
+    "          batch_size=128, #Batch-Size\n",
+    "          verbose=1,  \n",
+    "          validation_data=(x_test_gray, y_test_gray)) #print Ausgabe des Trainingsverlaufes 0=nein 1=ja\n",
+    "\n",
+    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
+    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
+    "plt.figure(figsize=(14,10))\n",
+    "\n",
+    "plt.subplot(221)\n",
+    "plt.plot(three_layer_mlp_dropout_30_history.history['loss'], label='train_loss')\n",
+    "plt.plot(three_layer_mlp_dropout_30_history.history['val_loss'], label='val_loss')\n",
+    "plt.legend(['train_loss', 'val_loss'])\n",
+    "\n",
+    "plt.subplot(222)\n",
+    "plt.plot(three_layer_mlp_dropout_30_history.history['accuracy'], label='train_acc')\n",
+    "plt.plot(three_layer_mlp_dropout_30_history.history['val_accuracy'], label='val_acc')\n",
+    "plt.legend(['train_acc', 'val_acc'])"
+   ]
   }
  ],
  "metadata": {
