--- a/3_Layer_MLP.ipynb
+++ b/3_Layer_MLP.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "0f5e646c",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a62fcc82",
    "metadata": {},
    "outputs": [
@@ -1735,13 +1735,7 @@
       "680/680 [==============================] - 8s 11ms/step - loss: 0.0012 - accuracy: 0.9982 - val_loss: 0.0647 - val_accuracy: 0.9017\n",
       "Epoch 56/100\n",
       "680/680 [==============================] - 8s 11ms/step - loss: 0.0012 - accuracy: 0.9985 - val_loss: 0.0656 - val_accuracy: 0.9033\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "680/680 [==============================] - 8s 11ms/step - loss: 0.0011 - accuracy: 0.9982 - val_loss: 0.0725 - val_accuracy: 0.8987\n",
       "Epoch 58/100\n",
       "680/680 [==============================] - 8s 11ms/step - loss: 0.0012 - accuracy: 0.9985 - val_loss: 0.0855 - val_accuracy: 0.8852\n",
@@ -2891,13 +2885,7 @@
       "680/680 [==============================] - 6s 9ms/step - loss: 5.9286e-04 - accuracy: 0.9993 - val_loss: 0.0455 - val_accuracy: 0.9002\n",
       "Epoch 56/100\n",
       "680/680 [==============================] - 6s 9ms/step - loss: 8.3505e-04 - accuracy: 0.9989 - val_loss: 0.0446 - val_accuracy: 0.9040\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "680/680 [==============================] - 6s 9ms/step - loss: 5.8272e-04 - accuracy: 0.9994 - val_loss: 0.0460 - val_accuracy: 0.9023\n",
       "Epoch 58/100\n",
       "680/680 [==============================] - 6s 9ms/step - loss: 6.4765e-04 - accuracy: 0.9993 - val_loss: 0.0483 - val_accuracy: 0.8987\n",
@@ -3173,13 +3161,7 @@
       "680/680 [==============================] - 8s 11ms/step - loss: 0.0084 - accuracy: 0.9654 - val_loss: 0.0276 - val_accuracy: 0.9203\n",
       "Epoch 56/100\n",
       "680/680 [==============================] - 8s 12ms/step - loss: 0.0084 - accuracy: 0.9659 - val_loss: 0.0290 - val_accuracy: 0.9204\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "680/680 [==============================] - 8s 11ms/step - loss: 0.0084 - accuracy: 0.9659 - val_loss: 0.0287 - val_accuracy: 0.9217\n",
       "Epoch 58/100\n",
       "680/680 [==============================] - 8s 12ms/step - loss: 0.0084 - accuracy: 0.9656 - val_loss: 0.0304 - val_accuracy: 0.9167\n",
@@ -3456,13 +3438,7 @@
       "680/680 [==============================] - 7s 10ms/step - loss: 0.0039 - accuracy: 0.9885 - val_loss: 0.0321 - val_accuracy: 0.9159\n",
       "Epoch 56/100\n",
       "680/680 [==============================] - 7s 10ms/step - loss: 0.0039 - accuracy: 0.9881 - val_loss: 0.0337 - val_accuracy: 0.9139\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "680/680 [==============================] - 7s 10ms/step - loss: 0.0038 - accuracy: 0.9878 - val_loss: 0.0325 - val_accuracy: 0.9187\n",
       "Epoch 58/100\n",
       "680/680 [==============================] - 7s 10ms/step - loss: 0.0038 - accuracy: 0.9890 - val_loss: 0.0317 - val_accuracy: 0.9205\n",
@@ -3739,13 +3715,7 @@
       "680/680 [==============================] - 9s 14ms/step - loss: 0.0023 - accuracy: 0.9952 - val_loss: 0.0599 - val_accuracy: 0.8961\n",
       "Epoch 56/100\n",
       "680/680 [==============================] - 9s 14ms/step - loss: 0.0024 - accuracy: 0.9949 - val_loss: 0.0569 - val_accuracy: 0.9040\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "680/680 [==============================] - 9s 13ms/step - loss: 0.0023 - accuracy: 0.9952 - val_loss: 0.0566 - val_accuracy: 0.9059\n",
       "Epoch 58/100\n",
       "680/680 [==============================] - 9s 13ms/step - loss: 0.0024 - accuracy: 0.9953 - val_loss: 0.0651 - val_accuracy: 0.9011\n",
@@ -4297,13 +4267,7 @@
       "680/680 [==============================] - 9s 13ms/step - loss: 0.0033 - accuracy: 0.9906 - val_loss: 0.0318 - val_accuracy: 0.9178\n",
       "Epoch 56/100\n",
       "680/680 [==============================] - 9s 13ms/step - loss: 0.0033 - accuracy: 0.9907 - val_loss: 0.0344 - val_accuracy: 0.9181\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "680/680 [==============================] - 8s 12ms/step - loss: 0.0033 - accuracy: 0.9904 - val_loss: 0.0323 - val_accuracy: 0.9143\n",
       "Epoch 58/100\n",
       "680/680 [==============================] - 8s 12ms/step - loss: 0.0032 - accuracy: 0.9911 - val_loss: 0.0326 - val_accuracy: 0.9187\n",
@@ -4580,13 +4544,7 @@
       "680/680 [==============================] - 9s 13ms/step - loss: 0.0031 - accuracy: 0.9913 - val_loss: 0.0353 - val_accuracy: 0.9197\n",
       "Epoch 56/120\n",
       "680/680 [==============================] - 9s 13ms/step - loss: 0.0030 - accuracy: 0.9914 - val_loss: 0.0336 - val_accuracy: 0.9180\n",
-      "Epoch 57/120\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/120\n",
       "680/680 [==============================] - 8s 12ms/step - loss: 0.0031 - accuracy: 0.9911 - val_loss: 0.0330 - val_accuracy: 0.9200\n",
       "Epoch 58/120\n",
       "680/680 [==============================] - 8s 12ms/step - loss: 0.0031 - accuracy: 0.9915 - val_loss: 0.0327 - val_accuracy: 0.9201\n",
@@ -4909,13 +4867,7 @@
       "680/680 [==============================] - 8s 12ms/step - loss: 0.0014 - accuracy: 0.9972 - val_loss: 0.0250 - val_accuracy: 0.9154\n",
       "Epoch 56/100\n",
       "680/680 [==============================] - 8s 12ms/step - loss: 0.0014 - accuracy: 0.9975 - val_loss: 0.0259 - val_accuracy: 0.9181\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "680/680 [==============================] - 8s 12ms/step - loss: 0.0014 - accuracy: 0.9973 - val_loss: 0.0254 - val_accuracy: 0.9166\n",
       "Epoch 58/100\n",
       "680/680 [==============================] - 8s 12ms/step - loss: 0.0013 - accuracy: 0.9976 - val_loss: 0.0265 - val_accuracy: 0.9187\n",
@@ -5060,6 +5012,14 @@
     "plt.plot(three_layer_mlp_dropout_30_history.history['accuracy'], label='train_acc')\n",
     "plt.plot(three_layer_mlp_dropout_30_history.history['val_accuracy'], label='val_acc')\n",
     "plt.legend(['train_acc', 'val_acc'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96274852",
+   "metadata": {},
+   "source": [
+    "#### early stopping einbauen"
    ]
   },
   {
