--- a/Modularbeit.ipynb
+++ b/Modularbeit.ipynb
@@ -358,6 +358,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 2.1.2.1 Aktivationfunction - sigmoid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2.1.3. Vergleich mehrerer Optimizer"
    ]
   },
