--- a/1_Hidden_Layer_Final.ipynb
+++ b/1_Hidden_Layer_Final.ipynb
@@ -38,22 +38,18 @@
     "import statsmodels.api as sm\n",
     "import statsmodels.stats.api as sms\n",
     "\n",
-    "#den oberen Teil kennt man schon vom letzten Mal...\n",
-    "#Theano kommt neu dazu - \n",
-    "#Library für effiziente Berechnungen mit großen Matrizen -> DeepLearning!\n",
+    "\n",
     "import theano \n",
     "import tensorflow\n",
     "\n",
     " \n",
-    "#Jetzt noch scikit-learn:\n",
-    "#hier stecken viele Funktionalitäten drin, die man gut brauchen kann: \n",
-    "#Fehlerfunktionen, Standard-Modelltypen, Preprocessing-Algorithmen, Daten... \n",
+    " \n",
     "\n",
     "import sklearn as sl \n",
     "from sklearn import model_selection, metrics, datasets\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "#Import wichtiger Keras Funktionalitäten\n",
+    "\n",
     "\n",
     "import keras\n",
     "from keras.datasets import mnist\n",
@@ -64,7 +60,7 @@
     "from keras.callbacks import EarlyStopping\n",
     "\n",
     "from keras.utils import to_categorical\n",
-    "from keras.optimizers import SGD #Stochastic Gradient Descent\n",
+    "from keras.optimizers import SGD \n",
     "from keras.utils import plot_model\n",
     "\n",
     "import pickle"
@@ -128,11 +124,9 @@
     "x_validation_color = data_color['x_validation'].transpose(0, 2, 3, 1)\n",
     "\n",
     "# one hot encoding\n",
-    "#y_train_gray = to_categorical(data_gray['y_train'], num_classes=43)\n",
     "y_train_gray = data_gray['y_train']\n",
     "y_train_color = to_categorical(data_color['y_train'], num_classes=43)\n",
     "y_test_gray = to_categorical(data_gray['y_test'], num_classes=43)\n",
-    "#y_test_gray = data_gray['y_test']\n",
     "y_test_color = to_categorical(data_color['y_test'], num_classes=43)\n",
     "\n",
     "print('x_train_gray.shape: ' + str(x_train_gray.shape))\n",
@@ -354,8 +348,7 @@
     "          verbose=1,  \n",
     "          validation_data=(x_test_gray, y_test_gray)) #print Ausgabe des Trainingsverlaufes 0=nein 1=ja\n",
     "\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
+    "\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -470,8 +463,6 @@
     "          callbacks=[early_stopping]\n",
     ")\n",
     "\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -618,8 +609,6 @@
     "          callbacks=[early_stopping]\n",
     ")\n",
     "\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -748,8 +737,6 @@
     "          callbacks=[early_stopping]\n",
     ")\n",
     "\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -864,8 +851,7 @@
     "          callbacks=[early_stopping]\n",
     ")\n",
     "\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
+    "\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -1019,8 +1005,7 @@
     "          callbacks=[early_stopping]\n",
     ")\n",
     "\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
+    "\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -1328,8 +1313,7 @@
     "              optimizer='adam',\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "#Early Stopping implementieren -> Vermeidet Overfitting nach Anstieg z.B. von val_loss=0,02\n",
-    "# early_stopping = EarlyStopping(monitor=\"val_loss\", min_delta=0.02, patience=12, verbose=1, restore_best_weights=True)\n",
+    "\n",
     "\n",
     "# Modell trainieren\n",
     "three_layer_mlp_dropout_50_history = three_layer_mlp_dropout_50.fit(x_train_gray, y_train_gray, \n",
@@ -1337,11 +1321,10 @@
     "          batch_size=128, #Batch-Size\n",
     "          verbose=1,  \n",
     "          validation_data=(x_test_gray, y_test_gray),\n",
-    "          # callbacks=[early_stopping]\n",
+    "          \n",
     ")\n",
     "\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
+    "\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -1468,8 +1451,7 @@
     "          callbacks=[early_stopping]\n",
     ")\n",
     "\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
+    "\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -1602,8 +1584,7 @@
     "          validation_data=(x_test_gray, y_test_gray), \n",
     "          callbacks=[early_stopping]\n",
     ")\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
+    "\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -1778,8 +1759,7 @@
     "          validation_data=(x_test_gray, y_test_gray), \n",
     "          callbacks=[early_stopping]\n",
     ")\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
+    "\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -1926,8 +1906,7 @@
     "          validation_data=(x_test_gray, y_test_gray), \n",
     "          callbacks=[early_stopping]\n",
     ")\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
+    "\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -1958,7 +1937,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### II.I. Aktivierungsfunktion - sigmoid"
+    "#### II.I. Aktivierungsfunktion - sigmoid"
    ]
   },
   {
@@ -2909,8 +2888,7 @@
     "          validation_data=(x_test_gray, y_test_gray), \n",
     "          callbacks=[early_stopping]\n",
     ")\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
+    "\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -3289,8 +3267,7 @@
     "          validation_data=(x_test_gray, y_test_gray), \n",
     "          callbacks=[early_stopping]\n",
     ")\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
+    "\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -3423,8 +3400,7 @@
     "          validation_data=(x_test_gray, y_test_gray), \n",
     "          callbacks=[early_stopping]\n",
     ")\n",
-    "#plt.plot(dnn_no_dropout_history.history['accuracy'], label='train_acc')\n",
-    "#plt.plot(dnn_no_dropout_history.history['val_accuracy'], label='val_acc')\n",
+    "\n",
     "plt.figure(figsize=(14,10))\n",
     "\n",
     "plt.subplot(221)\n",
@@ -3818,8 +3794,6 @@
     "              optimizer='adam',\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "#Early Stopping implementieren -> Vermeidet Overfitting nach Anstieg z.B. von val_loss=0,02\n",
-    "# early_stopping = EarlyStopping(monitor=\"val_loss\", min_delta=0.002, patience=12, verbose=1, restore_best_weights=True)\n",
     "\n",
     "# Modell trainieren\n",
     "onehdlmlp_do40_sig_colour_history = onehdlmlp_do40_sig_colour.fit(x_train_color, y_train_color, \n",
@@ -3827,7 +3801,6 @@
     "          batch_size=128, \n",
     "          verbose=1,  \n",
     "          validation_data=(x_test_color, y_test_color), \n",
-    "          # callbacks=[early_stopping]\n",
     ")\n",
     "\n",
     "plt.figure(figsize=(14,10))\n",
