final final updates

--- a/1_Hidden_Layer_Final.ipynb
+++ b/1_Hidden_Layer_Final.ipynb
@@ -3438,7 +3438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### IV.I. Vorbereitung: Farbdaten reshape"
+    "# IV.I. Vorbereitung: Farbdaten reshape"
    ]
   },
   {
